# dynamic-crud

./: .gitignore  GOALS.md  README.md  RULES.md  _MULTI_TABLES.db
backend/: conftest.py  main.py  pyproject.toml  test_comments.py  test_fields.py  test_files.py  test_groups.py  test_items.py  test_permissions.py  test_relationships.py  test_tables.py
backend/alembic/: env.py
backend/alembic/versions/: 20d0f2171dd8_add_user_view_prefs.py  26e56fd2ccce_update_field_type_check.py  3ded1d30dcae_add_represent_and_system_rels.py  5c2f33b63ec1_initial_schema.py  6a40ade4fe70_add_users_groups_auth_files_comments.py  7e59eded5a35_add_field_images.py  b4323b89179f_multi_table_support.py  b55a6a897de8_make_to_table_id_nullable.py  caf569a3924c_add_manager_to_users.py  e9d81211fee7_add_relationships.py
backend/app/: auth.py  database.py  helpers.py  main.py  models.py  permissions.py
backend/app/routers/: comments.py  fields.py  files.py  groups.py  images.py  items.py  perms.py  relationships.py  tables.py  users.py  view_prefs.py
backend/static/: index.html
backend/static/assets/: index-BB1kKaY4.css  index-BJtf_A-i.js  index-BPL4pdBt.js  index-BSOcInW5.js  index-Bc0vCK1n.js  index-BzkMMNwI.css  index-C-jmtFbG.css  index-CBmOWu7A.js  index-CJC-ivxH.js  index-CQnyb5Pc.js  index-CT7PsRCf.js  index-CYvPbMta.js  index-C_vqJW2I.css  index-CpaKLydb.css  index-CrNncsct.js  index-CvizZmHg.css  index-D4bo-EYC.js  (+12 more)
backend/tests/: conftest.py  test_auth.py  test_e2e_relationships.py  test_field_types.py  test_fields.py  test_items.py  test_manager.py  test_row_level_permissions.py
(+28 files in other folders)
